@@ -333,6 +333,11 @@ and code.  The following table lists some simple cases:</p>
     <td>"powerpc", "powerPC" or "PowerPc"</td>
   </tr>
   <tr>
+    <td>"Red Hat"</td>
+    <td>"RedHat" or "Redhat"</td>
+    <td></td>
+  </tr>
+  <tr>
     <td>"SPARC"</td>
     <td>"Sparc" or "sparc"</td>
   </tr>
