@@ -69,7 +69,7 @@ Successful</p>
 <p><b>i686-pc-sco3.2v5.0.5</b><br />
 Successful</p>
 
-<p><b>x86-unknown-linux-gnu RedHat 5.1</b><br />
+<p><b>x86-unknown-linux-gnu Red Hat 5.1</b><br />
 Successful</p>
 
 <p><b>mips-sgi-irix5.2</b><br />
