@@ -15,8 +15,8 @@ for EGCS 1.1, <a href="features.html">new features</a> to be found in
 EGCS 1.1, etc.</p>
 
 <p> August 30, 1998.  Regression, libg++, glibc, linux kernel, rtems testing
-all look good.  RedHat 5.1 testing looks good on the x86 and I've been told
-that RedHat 5.1 testing on the Alpha looks good too.  No word on the SPARC
+all look good.  Red Hat 5.1 testing looks good on the x86 and I've been told
+that Red Hat 5.1 testing on the Alpha looks good too.  No word on the SPARC
 port.</p>
 
 <p> August 14, 1998.  The EGCS 1.1 sources are frozen.  Only critical patches
