@@ -11,7 +11,7 @@
 <h2>Package/Feature Testing</h2>
 <p> In addition to regression testing it is important to perform tests
 on larger software packages.  The key packages used for GCC 2.95 testing
-are the Linux kernel, GNU C library, RedHat 6.0 sources and the LAPACK
+are the Linux kernel, GNU C library, Red Hat 6.0 sources and the LAPACK
 library.</p>
 
 <table border="0">
