@@ -114,10 +114,10 @@ possible, the release will support other targets as well.</p>
 <table align="center">
 <caption>Primary Evaluation Platforms</caption>
 <tr><th>Chip</th>     <th>OS</th>                  <th>Triplet</th></tr>
-<tr><td>Alpha</td>    <td>RedHat Linux 6.2</td>    <td></td></tr>
+<tr><td>Alpha</td>    <td>Red Hat Linux 6.2</td>   <td></td></tr>
 <tr><td>HPPA</td>     <td>HPUX 11.0</td>           <td>hppa2.0w-hp-hpux11.00</td></tr>
 <tr><td>Intel x86</td><td>Debian GNU/Linux 2.2</td><td>i386-pc-linux-gnu</td></tr>
-<tr><td>Intel x86</td><td>RedHat Linux 6.2</td>    <td>i686-pc-linux-gnu</td></tr>
+<tr><td>Intel x86</td><td>Red Hat Linux 6.2</td>   <td>i686-pc-linux-gnu</td></tr>
 <tr><td>MIPS</td>     <td>IRIX 6.5</td>            <td>mips-sgi-irix6.5</td></tr>
 <tr><td>PowerPC</td>  <td>AIX 4.3.3</td>           <td>powerpc-ibm-aix4.3.3.0</td></tr>
 <tr><td>SPARC</td>    <td>Solaris 2.7</td>         <td>sparc-sun-solaris2.7</td></tr>
