@@ -74,7 +74,7 @@ possible, the release will support other targets as well.</p>
                       <th>Triplet</th>
                       <th>Tester</th>
 </tr>
-<tr><td>Alpha</td>    <td>RedHat Linux 7.1</td>
+<tr><td>Alpha</td>    <td>Red Hat Linux 7.1</td>
                       <td>alpha-unknown-linux-gnu</td>
     <td><a href="mailto:rth@redhat.com">Richard Henderson</a></td>
 </tr>
@@ -83,7 +83,7 @@ possible, the release will support other targets as well.</p>
     <td><a href="mailto:dave@hiauly1.hia.nrc.ca">John David Anglin</a></td>
 </tr>
 <tr><td>Intel x86</td><td>Debian GNU/Linux 2.2</td><td>i386-pc-linux-gnu</td><td>&nbsp;</td></tr>
-<tr><td>Intel x86</td><td>RedHat Linux 6.2</td>    <td>i686-pc-linux-gnu</td><td>&nbsp;</td></tr>
+<tr><td>Intel x86</td><td>Red Hat Linux 6.2</td>   <td>i686-pc-linux-gnu</td><td>&nbsp;</td></tr>
 <tr><td>Intel x86</td><td>FreeBSD 4.5</td>
                       <td>i386-unknown-freebsd4.5</td>
     <td><a href="mailto:rittle@latour.rsch.comm.mot.com">Loren James Rittle</a></td>
