@@ -68,7 +68,7 @@ possible, the release will support other targets as well.</p>
                       <th>Triplet</th>
                       <th>Tester</th>
 </tr>
-<tr><td>Alpha</td>    <td>RedHat Linux 7.1</td>
+<tr><td>Alpha</td>    <td>Red Hat Linux 7.1</td>
                       <td>alpha-unknown-linux-gnu</td>
     <td><a href="mailto:rth@redhat.com">Richard Henderson</a></td>
 </tr>
@@ -80,7 +80,7 @@ possible, the release will support other targets as well.</p>
                       <td>i386-pc-linux-gnu</td>
     <td>&nbsp;</td>
 </tr>
-<tr><td>Intel x86</td><td>RedHat Linux 6.2</td>    <td>i686-pc-linux-gnu</td><td>&nbsp;</td></tr>
+<tr><td>Intel x86</td><td>Red Hat Linux 6.2</td>   <td>i686-pc-linux-gnu</td><td>&nbsp;</td></tr>
 <tr><td>Intel x86</td><td>FreeBSD -STABLE/-CURRENT</td>
                       <td>i386-unknown-freebsd</td>
     <td><a href="mailto:rittle@labs.mot.com">Loren James Rittle</a></td>
