@@ -3,7 +3,7 @@ to provide a comparison with the GCJ CNI example.  The
 source files are identical to the jni-kaffe example; only
 the Makefile has changed.
 
-This was built using GCJ 3.0 on a RedHat 6.0 system, and
+This was built using GCJ 3.0 on a Red Hat 6.0 system, and
 run by installing libsampNat.so in a directory in the
 library path and running the sample executable.
 
