@@ -1,7 +1,7 @@
 This is a trivial example of a JNI native method intended
 to provide a comparison with the GCJ CNI example.
 
-This was built using the Kaffe JVM on a RedHat 6.0 system;
+This was built using the Kaffe JVM on a Red Hat 6.0 system;
 substitute 'javah' for 'kaffeh' for Sun's JDK.
 
 ==> Makefile <==
