@@ -13,7 +13,7 @@
 <p>We are pleased to announce that 
 <a href="http://www.codesourcery.com">CodeSourcery, LLC</a> 
 and 
-<a href="http://www.redhat.com">Cygnus, a RedHat company</a> 
+<a href="http://www.redhat.com">Cygnus, a Red Hat company</a> 
 have
 contributed an implementation of the static single assignment (SSA)
 representation for the GCC compiler.  SSA is used in many modern
