@@ -1,3 +1,8 @@
+2006-12-28  Gerald Pfeifer  <gerald@pfeifer.com>
+
+	* jni-kaffe.txt: Fix spelling of Red Hat.
+	* jni-comp.txt: Ditto.
+
 2006-11-12  Gerald Pfeifer  <gerald@pfeifer.com>
 
 	* projects.html: Remove links to jMocha page which is gone without
